# template-instructions

./: .agent  .brain-ab-tests.json  .brain-improvements.json  .brain-input-scores.json  .brain-tasks.json  .cursorrules  .dockerignore  .env.template  .gitignore  .gitlab-ci.yml  CHANGELOG.md  COMPOUND-ENGINEERING-SETUP.md  CONTEXT.md  CONTRIBUTING.md  DEPENDENCIES.md  Dockerfile  Dockerfile.dev  GEMINI.md  IMPLEMENTATION_SUCCESS.md  INTEGRATIONS.md  MANIFEST.in  PROJECT_RENAME.md  PUBLISHING.md  PUBLISH_NOW.md  QUICKSTART.md  README.md  README_IMPLEMENTATION.md  RELEASE_v2.7.0_STATUS.md  SECURITY.md  SETUP.md  TECH_STRATEGY.md  VERSION  agentic.yaml  asdlc.py  commit_err.txt  coverage.xml  docker-compose.yml  implementation_plan.md  index.html  install_dependencies.sh  (+17 more)
.agent/: CONFIG.md  GEMINI.md
.agent/demands/: example-daily-check.md
.agent/ide-integration/: INTEGRATION-SUMMARY.md  KIRO-IDE.md
.agent/knowledge-base/: AUTO-LEARNING-GUIDE.md  HOW-IT-WORKS.md  README.md  index.md
.agent/rules/: ai-enforcement.md  artifacts.md  auto-learning.md  code-quality.md  folder-structure.md  git-workflow.md  global.md  naming-conventions.md  skills.md
.agent/skills/: role-ba.md  role-brain.md  role-dev.md  role-devops.md  role-game.md  role-mobile.md  role-orchestrator.md  role-pm.md  role-po.md  role-research.md  role-stakeholder.md  role-uiux.md
.agent/templates/: Knowledge-Entry-Template.md  Specification-Template.md  ab-comparison-report.md  observer-report.md  self-learning-digest.md
.agent/workflows/: DECISION-TREE.md  README.md  auto.md  autogen.md  autoskill.md  brain.md  chat.md  commit.md  compound.md  concurrent.md  cycle.md  debug.md  deep-search.md  dev.md  devops.md  docs.md  emergency.md  explore.md  housekeeping.md  kb-search.md  metrics.md  monitor.md  onboarding.md  orchestrator.md  planning.md  pm.md  po.md  preflight.md  qa.md  refactor.md  release.md  reporter.md  research.md  review.md  route.md  sa.md  seca.md  sprint.md  stakeholder.md  swarm.md  (+4 more)
.agentic_sdlc/: sdlc_board.json  skill_metadata.json
.brain/: .brain-improvements.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  mlc_config.json
.kiro/: 100_PERCENT_COMPLETE.md  AUDIT_INDEX.md  AUDIT_SUMMARY.md  FINAL_SUMMARY.md  HOUSEKEEPING_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_ROADMAP.md  QUICK_REFERENCE.md  ROOT_ORGANIZATION.md  SYSTEM_AUDIT_REPORT.md  VISUAL_OVERVIEW.md
agentic_sdlc/: README_TOOLS.md  __init__.py  cli.py
agentic_sdlc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
agentic_sdlc.egg-info.trash/: PKG-INFO
cli/: __init__.py  main.py
config/: README.md  VALIDATOR_USAGE.md
docs/: .brain-health-history.json  .brain-improvements.json  .brain-learner-log.json  .brain-scores.json  .brain-state.db  AGENTS.md  ARCHITECTURE.md  AUDIT-REPORT-2026-01-30.md  CLEANUP-AUDIT-REPORT-20260209_144739.md  CLEANUP-AUDIT-REPORT-20260209_163543.md  CLEANUP-AUDIT-REPORT-20260209_164049.md  CLEANUP-AUDIT-REPORT-20260209_164109.md  CLEANUP-AUDIT-REPORT-20260209_164408.md  CLEANUP-AUDIT-REPORT-20260209_164654.md  CLEANUP-AUDIT-REPORT-20260209_165136.md  CLEANUP-AUDIT-REPORT-20260209_165611.md  CLEANUP-SUMMARY-20260209_165320.md  CLEANUP-SUMMARY-20260209_165632.md  CONFIGURATION.md  DIAGRAMS_SUMMARY.md  GETTING_STARTED.md  INSTALLATION.md  KNOWLEDGE-BASE-GUIDE.md  KNOWLEDGE-BASE-SIMPLE.md  MANUAL_PYPI_PUBLISH.md  MIGRATION.md  MONOREPO-ARCHITECTURE.md  NEO4J-DOCUMENTATION-UPDATE-COMPLETE.md  NEW_FEATURES_v2.6.0.md  PLUGIN_DEVELOPMENT.md  PROJECT-DOCUMENTATION-INDEX.md  README.md  RELEASE_WORKFLOW.md  TROUBLESHOOTING.md  TYPESCRIPT_ERROR_FIX.md  TYPE_HINTS_IMPLEMENTATION.md  V2_STRUCTURE_COMPARISON.md  brain.md
examples/: agent_pool_demo.py  audit_trail_demo.py  basic_usage.py  concurrency_example.py  error_handling_example.py  execution_planner_demo.py  graceful_degradation_example.py  main_agent_demo.py  model_optimizer_demo.py  model_optimizer_integration_example.py  senior_developer_workflow.py  v2_structure_comparison_demo.py  workflow_engine_demo.py
instructions/: global.md  usage.md
mcp/: README.md  __init__.py  config.py  protocol.py
models/: enums.py  validators.py
monitoring/: __init__.py  alerts.py  health.py  loggers.py  metrics.py  prometheus.yml
projects/: README.md
scripts/: generate_api_docs.py  install_hooks.sh  migrate.py  migrate_tests.py  run-tests.sh  setup.sh  validate-config.py  validate_docs.py  verify_requirements.py  version_bump.py
security/: __init__.py  audit_logger.py  encryption.py  secrets_manager.py  validators.py
templates/: api_reference_template.md.j2  example_template.py.j2  guide_template.md.j2  use_case_template.md.j2
tests/: GEMINI.md  MIGRATION_SUMMARY.md  README.md  conftest.py  pytest.ini  test_agent_manage.py  test_api_client_property_tests.py  test_api_key_manager.py  test_api_key_manager_property_tests.py  test_api_model_management_data_models_property_tests.py  test_audit_trail_integration.py  test_brain_components.py  test_cli_interface.py  test_cli_interface_property_tests.py  test_cli_python.py  test_common.py  test_concurrency_property_tests.py  test_config_manager_property_tests.py  test_cost_tracker_property_tests.py  test_document_sync.py  test_emergency.py  test_error_handler.py  test_error_handler_property_tests.py  test_evaluator_property_tests.py  test_failover_manager_property_tests.py  test_graceful_degradation_property_tests.py  test_health_checker_property_tests.py  test_hitl.py  test_integration_e2e.py  test_knowledge_graph.py  test_learning_engine.py  test_metrics_exporter.py  test_metrics_exporter_property_tests.py  test_model_optimizer_property_tests.py  test_performance_monitor_property_tests.py  test_rate_limiter_property_tests.py  test_registry_property_tests.py  test_release.py  test_selector.py  test_selector_property_tests.py  (+4 more)
tests_temp/: test_config.yaml
tools/: requirements.txt  run.py
utils/: common.py  helpers.py  kb_manager.py  validators.py
website/: index.html
website-astro/: package.json
work_dir/: pyproject.toml  pytest.ini
(+1505 files in other folders)
