[build-system]
requires = ["setuptools>=69.0.0", "wheel>=0.42.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-sdlc"
version = "3.0.0"
description = "AI-powered SDLC framework with self-learning brain, automated workflows, and intelligent knowledge management"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    { name = "Dao Quang Truong", email = "truongnat@gmail.com" },
]
maintainers = [
    { name = "Dao Quang Truong", email = "truongnat@gmail.com" },
]
keywords = [
    "ai",
    "sdlc",
    "workflow",
    "automation",
    "agent",
    "brain",
    "knowledge-management",
    "kit",
    "sdk",
    "agentic",
    "orchestration",
    "intelligence",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]
dependencies = [
    # Core dependencies
    "pydantic>=2.0.0,<3.0.0",
    "python-dotenv>=1.2.0,<2.0.0",
    "requests>=2.32.0,<3.0.0",
    "PyYAML>=6.0.0,<7.0.0",
    "PyGithub>=2.1.1,<3.0.0",
    "openai>=2.16.0,<3.0.0",
    "anthropic>=0.7.0,<1.0.0",
    "streamlit>=1.28.0,<2.0.0",
    "dspy-ai>=2.1.0,<3.0.0",
    "docker>=6.1.0,<7.0.0",
    "googlesearch-python>=1.2.0,<2.0.0",
    "autogen-agentchat>=0.4.0,<1.0.0",
    "neo4j>=5.15.0,<6.0.0",
    "PyMuPDF>=1.26.0,<2.0.0",
    "torch>=2.1.0,<3.0.0",
    "transformers>=4.45.0,<5.0.0",
    "sentencepiece>=0.2.0,<0.3.0",
    "Pillow>=10.0.0,<12.0.0",
    "unstructured>=0.10.0,<1.0.0",
    # Async and HTTP
    "aiohttp>=3.9.0,<4.0.0",
    "aiosignal>=1.3.0,<2.0.0",
    "anyio>=4.0.0,<5.0.0",
    "httpx>=0.27.0,<1.0.0",
    "urllib3>=2.0.0,<3.0.0",
    # Data processing and serialization
    "pandas>=2.0.0,<3.0.0",
    "numpy>=1.26.0,<3.0.0",
    "scipy>=1.10.0,<2.0.0",
    "msgpack>=1.0.0,<2.0.0",
    "dirtyjson>=1.0.0,<2.0.0",
    # ML and NLP
    "accelerate>=0.25.0,<2.0.0",
    "huggingface_hub>=0.36.0,<0.37.0",
    "sentence_transformers>=5.2.0,<6.0.0",
    "nltk>=3.9.0,<4.0.0",
    "tiktoken>=0.12.0,<0.13.0",
    # PDF and document processing
    "pdfplumber>=0.11.0,<0.12.0",
    "pdfminer_six>=20231228",
    "pypdfium2>=4.0.0,<6.0.0",
    "striprtf>=0.0.26,<0.1.0",
    # Utilities
    "certifi>=2024.0.0",
    "cffi>=2.0.0,<3.0.0",
    "charset_normalizer>=3.4.0,<4.0.0",
    "colorama>=0.4.6,<0.5.0",
    "defusedxml>=0.7.1,<0.8.0",
    "deprecated>=1.3.0,<2.0.0",
    "distro>=1.9.0,<2.0.0",
    "fastjsonschema>=2.21.0,<3.0.0",
    "filetype>=1.2.0,<2.0.0",
    "frozenlist>=1.8.0,<2.0.0",
    "gitignore_parser>=0.1.13,<0.2.0",
    "greenlet>=3.3.0,<4.0.0",
    "griffe>=1.15.0,<2.0.0",
    "h11>=0.16.0,<0.17.0",
    "jinja2>=3.1.0,<4.0.0",
    "joblib>=1.5.0,<2.0.0",
    "jsonschema>=4.26.0,<5.0.0",
    "jupyter_client>=8.8.0,<9.0.0",
    "jupyter_core>=5.9.0,<6.0.0",
    "markupsafe>=3.0.0,<4.0.0",
    "mistune>=3.2.0,<4.0.0",
    "mpmath>=1.3.0,<2.0.0",
    "multidict>=6.7.0,<7.0.0",
    "nbclient>=0.10.0,<0.11.0",
    "nbconvert>=7.17.0,<8.0.0",
    "nbformat>=5.10.0,<6.0.0",
    "nest_asyncio>=1.6.0,<2.0.0",
    "networkx>=3.0.0,<4.0.0",
    "pandocfilters>=1.5.0,<2.0.0",
    "propcache>=0.2.0,<0.5.0",
    "psutil>=5.9.0,<8.0.0",
    "pycparser>=2.21,<3.0.0",
    "pygments>=2.17.0,<3.0.0",
    "pytz>=2024.1",
    "pyzmq>=25.1.0,<28.0.0",
    "regex>=2024.1.1",
    "setuptools>=68.0.0",
    "six>=1.16.0,<2.0.0",
    "sniffio>=1.3.0,<2.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "sympy>=1.12.0,<2.0.0",
    "tenacity>=8.5.0,<10.0.0",
    "tornado>=6.3.0,<7.0.0",
    "tqdm>=4.66.0,<5.0.0",
    "typing_inspect>=0.8.0,<0.10.0",
    "tzdata>=2024.1",
    "webencodings>=0.5.0,<0.6.0",
    "wrapt>=2.0.0,<3.0.0",
    "yarl>=1.22.0,<2.0.0",
    "bleach>=6.3.0,<7.0.0",
    "click>=8.3.0,<9.0.0",
]

[project.optional-dependencies]
cli = [
    "click>=8.3.0,<9.0.0",
    "rich>=13.0.0,<14.0.0",
]
dev = [
    # Testing Framework
    "pytest>=7.4.0,<8.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-asyncio>=0.21.0,<0.22.0",
    "pytest-mock>=3.12.0,<4.0.0",
    "pytest-benchmark>=4.0.0,<5.0.0",
    "hypothesis>=6.92.0,<7.0.0",
    # Code Quality and Linting
    "black>=23.0.0,<24.0.0",
    "ruff>=0.1.0,<0.2.0",
    "pylint>=3.0.0,<4.0.0",
    "flake8>=6.1.0,<7.0.0",
    "isort>=5.12.0,<6.0.0",
    # Type Checking
    "mypy>=1.7.0,<2.0.0",
    "types-requests>=2.31.0,<3.0.0",
    "types-PyYAML>=6.0.0,<7.0.0",
    "types-python-dateutil>=2.8.0,<3.0.0",
    # Documentation
    "sphinx>=7.2.0,<8.0.0",
    "sphinx-rtd-theme>=2.0.0,<3.0.0",
    "mkdocs>=1.5.0,<2.0.0",
    "mkdocs-material>=9.5.0,<10.0.0",
    # Build Tools
    "build>=1.0.0,<2.0.0",
    "twine>=4.0.0,<5.0.0",
    "wheel>=0.42.0,<0.43.0",
    # Development Utilities
    "ipython>=8.18.0,<9.0.0",
    "ipdb>=0.13.0,<0.14.0",
    "pre-commit>=3.6.0,<4.0.0",
    "tomli-w>=1.0.0,<2.0.0",
    # Security Scanning
    "bandit>=1.7.0,<2.0.0",
    "safety>=3.0.0,<4.0.0",
]
graph = [
    "neo4j>=5.14.0,<6.0.0",
]
mcp = [
    "tavily-python>=0.3.0,<0.4.0",
    "brave-search>=1.0.0,<2.0.0",
]
tools = [
    "PyGithub>=2.1.1,<3.0.0",
    "python-dotenv>=1.2.0,<2.0.0",
    "neo4j>=5.14.0,<6.0.0",
    "requests>=2.32.0,<3.0.0",
    "autogen-agentchat>=0.4.2,<1.0.0",
    "autogen-ext>=0.4.2,<1.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "pytest>=7.4.0,<8.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "black>=23.0.0,<24.0.0",
    "pylint>=3.0.0,<4.0.0",
    "mypy>=1.7.0,<2.0.0",
]
all = [
    "agentic-sdlc[cli,dev,graph,mcp,tools]",
]

[project.urls]
Homepage = "https://github.com/truongnat/agentic-sdlc"
Documentation = "https://github.com/truongnat/agentic-sdlc#readme"
Repository = "https://github.com/truongnat/agentic-sdlc"
Issues = "https://github.com/truongnat/agentic-sdlc/issues"

[project.scripts]
agentic = "agentic_sdlc.cli.main:main"
agentic-sdlc = "agentic_sdlc.cli.main:main"
asdlc = "agentic_sdlc.cli.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["agentic_sdlc*"]

[tool.setuptools.package-data]
agentic_sdlc = [
    "py.typed",
    "resources/**/*",
]

# ===== Testing Configuration =====

[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "property: Property-based tests",
    "performance: Performance and benchmark tests",
    "slow: Slow running tests",
    "requires_api: Tests that require API access",
    "requires_docker: Tests that require Docker",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

# Hypothesis configuration for property-based testing
[tool.hypothesis]
max_examples = 100  # Minimum 100 iterations per property test as per design
deadline = 5000  # 5 seconds per test case
derandomize = false
print_blob = true
phases = ["explicit", "reuse", "generate", "target", "shrink"]

[tool.coverage.run]
source = ["agentic_sdlc"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# ===== Code Formatting =====

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | node_modules
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true

# ===== Linting =====

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "node_modules",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
"tests/*" = ["S101"]      # use of assert in tests

# ===== Type Checking =====

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
strict_optional = true
check_untyped_defs = true
disallow_untyped_defs = true  # Enable strict type checking for all functions
disallow_any_unimported = false
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = false
disallow_any_generics = true  # Require type parameters for generic types
disallow_subclassing_any = true  # Prevent subclassing Any
disallow_untyped_calls = true  # Require type hints for function calls
disallow_incomplete_defs = true  # Require complete type hints
disallow_untyped_decorators = false
no_implicit_optional = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Ignore errors in files without complete type hints during transition
# Remove these as type hints are added
[[tool.mypy.overrides]]
module = [
    "agentic_sdlc.core.brain.*",
    "agentic_sdlc.orchestration.api_model_management.*",
    "agentic_sdlc.orchestration.agents.*",
    "agentic_sdlc.orchestration.models.*",
    "agentic_sdlc.infrastructure.*",
    "agentic_sdlc.intelligence.*",
]
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = [
    "dspy.*",
    "autogen.*",
    "neo4j.*",
    "streamlit.*",
    "googlesearch.*",
    "docker.*",
    "fitz.*",
    "unstructured.*",
    "psutil.*",
    "PyGithub.*",
    "github.*",
]
ignore_missing_imports = true

# ===== Bandit Security Scanning =====

[tool.bandit]
exclude_dirs = [
    "tests",
    ".venv",
    "build",
    "dist",
]
skips = [
    "B101",  # assert_used
    "B601",  # paramiko_calls
]

# ===== Pylint =====

[tool.pylint.main]
py-version = "3.10"
ignore = [
    "CVS",
    ".git",
    "__pycache__",
    ".venv",
]
jobs = 0  # Use all available CPUs

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "W0212",  # protected-access
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-args = 10
max-attributes = 15
max-bool-expr = 5
max-branches = 15
max-locals = 20
max-parents = 7
max-public-methods = 25
max-returns = 6
max-statements = 50
min-public-methods = 1
